# HaskMaintain

./: .gitignore  HaskMaintain.cabal  README.md  stack.yaml
app/: Main.hs
data/: Sample.hs
src/: Analyzer.hs  Complexity.hs  Metrics.hs
test/: Spec.hs
